# click_conf_file

./: CHANGELOG.md  README.md  pyproject.toml
click_conf_file/: __init__.py  decorator.py
tests/: conftest.py  test_click_conf_file.py
tests/fixtures/: conf1.toml  conf2.toml
